--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,7 +60,7 @@ color: unset;
     
     }
 .dsmovie-card{
-width: 360px;
+width: 100%;
 
 
 }
@@ -70,18 +70,21 @@ width: 360px;
     border-radius: 8px 8px 0 0;
 }
 .dsmovie-card-description{
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     background-color: var(--white);
     border-radius: 0 0 8px 8px;
+    min-width: 150px;
 }
 
 .dsmovie-card-description h3{
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 25px;
+    text-align: center;
     
 
 }
