--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,3 +101,9 @@ align-items: center;
 justify-content: center;
 border-radius: 4px;
 }
+
+.dsmovie-form-container{
+
+    padding: 40px 0;
+    max-width: 460px;
+}
