--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@
 --white: #fff;
 --text-gray: #4a4a4a;
 --text-light-gray: #aaa;
+--star-yellow: #FFBB3A;
 }
 
 *{
@@ -78,7 +79,7 @@ width: 100%;
     justify-content: space-between;
     background-color: var(--white);
     border-radius: 0 0 8px 8px;
-    min-width: 150px;
+    height: 220px;
 }
 
 .dsmovie-card-description h3{
@@ -88,6 +89,28 @@ width: 100%;
     text-align: center;
     
 
+}
+.dsmovie-card-description-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom img{
+    width: 22px;
+
+}
+
+.dsmovie-card-description-bottom h4{
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+.dsmovie-card-description-bottom p{
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light-gray);
+    margin: 10px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover{
